--- a/package.json
+++ b/package.json
@@ -1,14 +1,26 @@
 {
-  "name": "jsonresume-theme-fresh",
-  "version": "0.0.3",
-  "description": "Fresh theme for JSON Resume",
-  "author": "Tair Assimov",
+  "name": "perororo.github.io",
+  "version": "0.0.2",
+  "description": "Personal Website Based on JSON Resume",
+  "author": "Petar Prole",
   "repository": {
     "type": "git",
-    "url": "https://github.com/assimovt/jsonresume-theme-fresh"
+    "url": "https://github.com/perororo/perororo.github.io"
+  },
+  "scripts": {
+    "preview": "preview",
+    "updateEnglish": "cp public/* . && git add . && git commit -m \"Update resume\" && git push",
+    "previewEnglish": "cp profile.png public | true && cp public/index.html index.html | true && resume serve -r resume/english.json -p 420 english",
+    "previewGerman": "cp profile.png public | true && cp public/index.html index.html | true && resume serve -r resume/german.json -p 421 german",
+    "previewSkeleton": "resume serve -r resume/skeleton.json -p 422 english"
+  },
+  "bin": {
+    "resume": "./node_modules/.bin/resume"
   },
   "license": "MIT",
   "dependencies": {
-    "handlebars": "^2.0.0-alpha.4"
+    "handlebars": "4.5.3",
+    "jsonresume-theme-elegant": "^1.16.1",
+    "resume-cli": "1.2.7"
   }
 }
